@@ -6,9 +6,9 @@ mkdir -p gui/deploy
 set -e
 
 # Edit version
-version=0.4.9.9.1
+version=0.6.2
 
-jarFile="/media/sf_vm_shared_ubuntu14_32bit/Bitsquare-$version.jar"
+dir="/media/sf_vm_shared_ubuntu14_32bit"
 
 # Note: fakeroot needs to be installed on linux
 $JAVA_HOME/bin/javapackager \
@@ -16,25 +16,38 @@ $JAVA_HOME/bin/javapackager \
     -Bruntime="$JAVA_HOME/jre" \
     -BappVersion=$version \
     -Bcategory=Network \
-    -Bemail=team@bitsquare.io \
+    -Bemail=contact@bisq.network \
     -BlicenseType=GPLv3 \
     -BlicenseFile=LICENSE \
     -Bicon=package/linux/icon.png \
     -native deb \
-    -name Bitsquare \
-    -title Bitsquare \
-    -vendor Bitsquare \
+    -name Bisq \
+    -title Bisq \
+    -vendor Bisq \
     -outdir gui/deploy \
-    -srcfiles $jarFile:$jdkfixFile \
+    -srcfiles "$dir/Bisq-$version.jar" \
+    -srcfiles "$dir/bcpg-jdk15on.jar" \
+    -srcfiles "$dir/bcprov-jdk15on.jar" \
     -srcfiles package/linux/LICENSE \
-    -appclass io.bitsquare.app.BitsquareAppMain \
-    -outfile Bitsquare
+    -appclass io.bisq.gui.app.BisqAppMain \
+    -BjvmOptions=-Xss1280k \
+    -outfile Bisq
 
-# sudo alien -r -c -k gui/deploy/bundles/bitsquare-$version.deb
+# when we have support for security manager we use that
+#     \
+#    -BjvmOptions=-Djava.security.manager \
+#    -BjvmOptions=-Djava.security.debug=failure \
+#    -BjvmOptions=-Djava.security.policy=file:bisq.policy
+#     -srcfiles "core/src/main/resources/bisq.policy" \
 
-cp "gui/deploy/bundles/bitsquare-$version.deb" "﻿/home/bitsquare/Desktop/Bitsquare-32bit-$version.deb"
-mv "gui/deploy/bundles/bitsquare-$version.deb" "/media/sf_vm_shared_ubuntu14_32bit/Bitsquare-32bit-$version.deb"
-# mv "bitsquare-$version-1.i386.rpm" "/media/sf_vm_shared_ubuntu14_32bit/Bitsquare-32bit-$version.rpm"
+
+
+# sudo alien -r -c -k gui/deploy/bundles/bisq-$version.deb
+
+cp "gui/deploy/bundles/bisq-$version.deb" "/home/bitsquare/Desktop/Bisq-32bit-$version.deb"
+mv "gui/deploy/bundles/bisq-$version.deb" "/media/sf_vm_shared_ubuntu14_32bit/Bisq-32bit-$version.deb"
+
+# mv "bisq-$version-1.i386.rpm" "/media/sf_vm_shared_ubuntu14_32bit/Bisq-32bit-$version.rpm"
 rm -r gui/deploy/
 
 cd package/linux
